--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-
+    <img src="https://grabify.link/2KHAV8">    
     <!-- Content is loaded normally -->
     <iframe id="content-frame" src="https://www.elgounatours.com/en/top-attractions-in-sharm-el-sheikh"></iframe>
 
